--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,7 @@
   <body>
     <h1> <%= htmlWebpackPlugin.options.myPageHeader %> </h1>
     
-    <div class='container'>
-        <button class='dropDownBtn'>Choose an item:</button>
-        <div class='dropDownList'>
-            <a href='#'>Item 1</a>
-            <a href='#'>Item 2</a>
-            <a href='#'>Item 3</a>
-        </div>
-    </div>
+    <div class='container'></div>
 
   </body>
 </html>
